# agenthermes

./: .gitignore  A2A-DEEP-DIVE.md  AGENT-COMMERCE-RESEARCH.md  AGENT-READINESS-LEVELS.md  AGENTS.md  BUILD-PLAN.md  CHANGELOG.md  CLAUDE.md  COMPETITIVE-LANDSCAPE.md  CREDIT-SCORE-RESEARCH-PROMPT.md  EDGE-CASE-RESULTS.md  GATEWAY-BUILD-LOG.md  GATEWAY-PLAN.md  GATEWAY-TEST-RESULTS.md  IMPLEMENTATION-PLAN.md  IMPROVEMENT-LOG.md  LEVELS-HEALTHCARE.md  LEVELS-LOCAL-SERVICES.md  LEVELS-RESTAURANT.md  LEVELS-SAAS.md  MCP-ECOSYSTEM.md  OVERNIGHT-LOG.md  REAL-SCAN-RESULTS.md  RESCAN-RESULTS.md  SCAN-RESULTS-CALIBRATED.md  SCORING-AUDIT.md  STRATEGY.md  TEST-RESULTS.md  VERTICAL-RESEARCH.md  VERTICAL-TAXONOMY.md  next.config.ts  package-lock.json  package.json
.agent/: conventions.md  decisions-log.jsonl  runbook.md  schema.sql  scope.md
public/: openapi.json
research/: SYNTHESIS.md  agent-1-protocols.md  agent-2-rating-systems.md  agent-3-competitors.md  agent-4-dimensions.md  agent-5-adoption.md
src/: middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
src/components/: AgentJourneyScore.tsx  BlogArticleWrapper.tsx  Breadcrumbs.tsx  CopyButton.tsx  CountUp.tsx  FadeIn.tsx  Footer.tsx  GatewayFilter.tsx  HeroScanForm.tsx  Navbar.tsx  RecentlyScanned.tsx  RequestScanButton.tsx  ScoreGauge.tsx  ScrollCountUp.tsx  TechnicalDetailsSection.tsx  TierBadge.tsx
src/lib/: analytics.ts  audit-engine.ts  auth.ts  business.ts  embeddings.ts  error-logger.ts  (+8 more)
src/sdk/python/: __init__.py  agenthermes.py  pyproject.toml  setup.py
(+407 files in other folders)
