[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agenthermes"
version = "1.0.0"
description = "AgentHermes SDK - Check Agent Readiness Scores and discover agent-ready businesses."
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "AgentHermes", email = "hello@agenthermes.ai" },
]
keywords = ["agenthermes", "agent-readiness", "ai-agents", "mcp", "agent-commerce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
requests = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://agenthermes.ai"
Documentation = "https://agenthermes.ai/docs/sdk"
Repository = "https://github.com/agenthermes/sdk-python"

[tool.setuptools]
py-modules = ["agenthermes"]
